# msc-ai-project

./: .gitignore  771952 project proposal template.docx  README.md
01-planning/: 771952 project proposal template.docx  GANTT Chart.xlsx  Latent Space Representation of CAD geometry for Surrogate Modelling.docx  Literature Matrix .xlsx  ProjectOverview.pptx  ToDoList.xlsx  msc_project_proposal_20022024.docx  ~$GANTT Chart.xlsx  ~$ProjectOverview.pptx
01-planning/Admin/: msc_project_proposal_20022024.docx
01-planning/Presentations/: Enhanced Simulation - Problem Statment..pptx  ProjectOverview.pptx  Research Proposal.pptx
03-dev/: pyproject.toml
03-dev/Geometry/: __init__.py
03-dev/Geometry.egg-info/: PKG-INFO  SOURCES.txt
03-dev/Shapes/: generator.py
03-dev/data/: training_data.ipynb
04-data/: shape.py  training_data.ipynb
04-data/shape_data/: shapes_dataset.pkl
07-reports/: jhellewell_litreview.docx  ~$ellewell_litreview.docx
