[project]
name = "Geometry"
version = "0.0.0"
description = "Geometry Representation"
authors = [
    { name = "Josh Hellewell", email = "jhellewell1722@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch",
]

[tool.setuptools]
packages = ["Geometry"]